Some changes to make SenderService more generic