@@ -4,19 +4,26 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 import org.springframework.web.reactive.function.client.WebClient;
+import org.springframework.web.reactive.function.client.WebClientException;
+import org.springframework.web.reactive.function.client.WebClientRequestException;
+import org.springframework.web.reactive.function.client.WebClientResponseException;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 import ru.rassokhindanila.restmessagingtemplates.dto.Receiver;
 import ru.rassokhindanila.restmessagingtemplates.dto.SenderResponse;
+import ru.rassokhindanila.restmessagingtemplates.enums.ReceiverType;
 import ru.rassokhindanila.restmessagingtemplates.exception.SenderException;
 import ru.rassokhindanila.restmessagingtemplates.service.SenderService;
 
+import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
+import java.net.URL;
 import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 @Service
 public class WebSenderService implements SenderService {
@@ -30,20 +37,20 @@ public class WebSenderService implements SenderService {
 
     private Mono<SenderResponse> post(String url, Object data) throws SenderException {
         try {
-            URI uri = new URI(url);
-            WebClient webClient = WebClient.create(uri.toString());
+            URL parseUrl = new URL(url);
+            WebClient webClient = WebClient.create(parseUrl.toString());
             return webClient
                     .post()
                     .bodyValue(data)
                     .retrieve()
                     .bodyToMono(SenderResponse.class);
-        } catch (URISyntaxException e) {
-            logger.error("Malformed url: "+url);
-            throw new SenderException("Malformed URL");
-        } catch (org.springframework.web.reactive.function.client.WebClientException e)
+        } catch (WebClientException e)
         {
             logger.error(e.getMessage());
             throw new SenderException(e.getMessage());
+        } catch (MalformedURLException e) {
+            logger.error("Error occurred during sending message. Malformed url: " + url);
+            throw new SenderException("Malformed URL");
         }
     }
 
@@ -52,7 +59,12 @@ public class WebSenderService implements SenderService {
         for(String url : urls)
         {
             logger.info("SENDING MESSAGE "+data.toString()+" TO "+url);
-            responseList.add(post(url, data));
+            try {
+                responseList.add(post(url, data));
+            }catch(WebClientException e)
+            {
+                logger.error("GOT EXCEPTION IN POSTMANY");
+            }
         }
         return Flux.merge(responseList);
     }
@@ -64,9 +76,19 @@ public class WebSenderService implements SenderService {
 
     @Override
     public Flux<SenderResponse> send(Set<Receiver> receivers, Object data) throws SenderException {
+
+        receivers = receivers.stream()
+                .filter(this::canBeSent)
+                .collect(Collectors.toSet());
+        
         Set<String> urls = new HashSet<>();
         receivers.forEach(receiver -> urls.add(receiver.getDestination()));
         return postMany(urls, data);
+    }
+
+    @Override
+    public boolean canBeSent(Receiver receiver) {
+        return receiver.getReceiverType() == ReceiverType.POST;
     }
 
 
